--- a/modules/extraction-broker/package.json
+++ b/modules/extraction-broker/package.json
@@ -3,39 +3,52 @@
   "private": false,
   "version": "1.0.0",
   "license": "ISC",
-
   "main": "dist/main.js",
   "module": "dist/main.mjs",
   "types": "dist/main.d.ts",
-
   "scripts": {
-    "tsup": "tsup src/main.ts --format cjs,esm",
-    "build": "heft build && npm run tsup",
-    "rebuild": "heft build --clean && npm run tsup",
-    "test": "npm run build && heft test"
+    "clean": "rimraf dist",
+    "fix-path-aliases": "./bin/fix-path-aliases -f ./dist",
+    "tsup:build": "tsup src/main.ts --dts --format cjs,esm --sourcemap",
+    "tsup:watch": "npm run tsup:build -- --watch",
+    "heft:build": "heft build",
+    "heft:watch": "heft build --watch",
+    "test": "heft test",
+    "build:dev": "run-s heft:build fix-path-aliases",
+    "watch": "run-p heft:watch tsup:watch",
+    "rebuild": "run-s clean heft:build heft:watch"
   },
-
   "dependencies": {
     "axios": "1.3.3",
     "chalk": "^5.2.0",
     "crypto-js": "^4.1.1",
     "esm": "^3.2.25",
+    "fast-xml-parser": "^4.1.2",
+    "form-data": "^4.0.0",
+    "fp-ts": "^2.13.1",
     "fs-extra": "^11.1.0",
+    "io-ts": "^2.2.20",
     "lodash": "^4.17.21",
+    "xml-js": "^1.6.11",
     "yargs": "^17.7.1"
   },
   "devDependencies": {
-    "@types/crypto-js": "^4.1.1",
-    "@types/lodash": "^4.14.191",
-    "@types/fs-extra": "^11.0.1",
-    "@types/node": "18.14.0",
-    "@types/yargs": "^17.0.22",
-    "eslint": "^8.34.0",
-    "tsup": "^6.6.3",
-    "typescript": "^4.9.5",
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.0",
+    "@rushstack/eslint-config": "~3.2.0",
     "@rushstack/heft": "~0.49.7",
     "@rushstack/heft-jest-plugin": "~0.5.4",
-    "@rushstack/eslint-config": "~3.2.0",
-    "@types/heft-jest": "~1.0.3"
+    "@types/crypto-js": "^4.1.1",
+    "@types/fs-extra": "^11.0.1",
+    "@types/heft-jest": "~1.0.3",
+    "@types/lodash": "^4.14.191",
+    "@types/node": "18.14.0",
+    "@types/yargs": "^17.0.22",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "eslint": "^8.34.0",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^4.1.2",
+    "tsup": "^6.6.3",
+    "typescript": "^4.9.5"
   }
 }
