--- a/modules/extraction-broker/package.json
+++ b/modules/extraction-broker/package.json
@@ -8,18 +8,19 @@
   "types": "dist/main.d.ts",
   "scripts": {
     "clean": "heft clean",
-    "fix-path-aliases": "./bin/fix-path-aliases -f ./dist",
     "heft:build": "heft build",
-    "watch": "heft build --watch",
-    "test": "heft test --lite",
-    "test:watch": "heft test --watch",
-    "build": "run-s heft:build fix-path-aliases",
+    "heft:build:watch": "heft build --watch",
+    "heft:test": "heft test --lite",
+    "heft:test:watch": "heft test --watch",
+    "tsup:build": "tsup src/main.ts --dts --format cjs,esm --sourcemap",
+    "tsup:build:watch": "npm run tsup:build -- --watch",
+    "build": "run-p heft:build tsup:build",
+    "watch": "run-p heft:build:watch tsup:build:watch",
     "rebuild": "run-s clean build"
   },
   "dependencies": {
     "axios": "1.3.3",
     "crypto-js": "^4.1.1",
-    "fast-xml-parser": "^4.1.2",
     "form-data": "^4.0.0",
     "fp-ts": "^2.13.1",
     "fs-extra": "^11.1.0",
@@ -47,6 +48,7 @@
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.34.0",
     "npm-run-all": "^4.1.5",
+    "tsup": "^6.6.3",
     "typescript": "^4.9.5"
   }
 }
