--- a/modules/extraction-broker/package.json
+++ b/modules/extraction-broker/package.json
@@ -20,15 +20,16 @@
     "rebuild": "run-s clean build"
   },
   "dependencies": {
-    "axios": "1.3.3",
+    "axios": "1.3.4",
     "crypto-js": "^4.1.1",
+    "d-forest": "^3.2.4",
     "form-data": "^4.0.0",
     "fp-ts": "^2.13.1",
     "fs-extra": "^11.1.0",
     "io-ts": "^2.2.20",
     "lodash": "^4.17.21",
     "mongodb": "^5.1.0",
-    "mongoose": "^6.10.0",
+    "mongoose": "^7.0.1",
     "nconf": "^0.12.0",
     "xml-js": "^1.6.11",
     "yargs": "^17.7.1"
@@ -44,10 +45,10 @@
     "@types/heft-jest": "~1.0.3",
     "@types/lodash": "^4.14.191",
     "@types/nconf": "^0.10.3",
-    "@types/node": "18.14.0",
+    "@types/node": "18.14.6",
     "@types/yargs": "^17.0.22",
     "babel-plugin-module-resolver": "^5.0.0",
-    "eslint": "^8.34.0",
+    "eslint": "^8.35.0",
     "npm-run-all": "^4.1.5",
     "tsup": "^6.6.3",
     "typescript": "^4.9.5"
