--- a/modules/extraction-broker/package.json
+++ b/modules/extraction-broker/package.json
@@ -31,6 +31,7 @@
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.1",
     "nconf": "^0.12.0",
+    "winston": "^3.8.2",
     "xml-js": "^1.6.11",
     "yargs": "^17.7.1"
   },
