reference console output

--- a/modules/extraction-broker/tsconfig.json
+++ b/modules/extraction-broker/tsconfig.json
@@ -12,8 +12,10 @@
     "declarationMap": true,
     "inlineSources": true,
     "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
     "strict": true,
     "esModuleInterop": true,
+    "importHelpers": true,
     "types": ["node", "heft-jest"],
 
     "module": "commonjs",
