--- a/modules/extraction-broker/package.json
+++ b/modules/extraction-broker/package.json
@@ -3,7 +3,7 @@
   "private": false,
   "version": "1.0.0",
   "license": "ISC",
-  "main": "dist/main.js",
+  "main": "dist/main.bundle.js",
   "module": "dist/main.mjs",
   "types": "dist/main.d.ts",
   "scripts": {
@@ -27,6 +27,7 @@
     "fp-ts": "^2.13.1",
     "fs-extra": "^11.1.0",
     "io-ts": "^2.2.20",
+    "leven": "^4.0.0",
     "lodash": "^4.17.21",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.1",
@@ -46,7 +47,7 @@
     "@types/heft-jest": "~1.0.3",
     "@types/lodash": "^4.14.191",
     "@types/nconf": "^0.10.3",
-    "@types/node": "18.14.6",
+    "@types/node": "18.15.0",
     "@types/yargs": "^17.0.22",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.35.0",
