simplified compile/test/lint setup

--- a/modules/extraction-broker/tsconfig.json
+++ b/modules/extraction-broker/tsconfig.json
@@ -16,7 +16,7 @@
     "strict": true,
     "esModuleInterop": true,
     "importHelpers": true,
-    "types": ["node", "heft-jest"],
+    "types": ["node", "jest"],
 
     "module": "commonjs",
     "target": "ESNext",
