--- a/modules/extraction-broker/package.json
+++ b/modules/extraction-broker/package.json
@@ -7,16 +7,12 @@
   "module": "dist/main.mjs",
   "types": "dist/main.d.ts",
   "scripts": {
-    "clean": "heft clean",
-    "heft:build": "heft build",
-    "heft:build:watch": "heft build --watch",
-    "heft:test": "heft test --lite",
-    "heft:test:watch": "heft test --watch",
+    "clean": "rm -r dist/",
+    "compile": "tsc",
+    "lint": "eslint src/",
     "tsup:build": "tsup",
-    "tsup:build:watch": "tsup --watch",
-    "build": "run-p heft:build tsup:build",
+    "build": "run-p compile lint tsup:build",
     "bundle": "NODE_ENV=prod tsup --clean",
-    "watch": "run-p heft:build:watch tsup:build:watch",
     "rebuild": "run-s clean build"
   },
   "dependencies": {
@@ -39,19 +35,20 @@
   "devDependencies": {
     "@babel/cli": "^7.21.0",
     "@babel/core": "^7.21.0",
-    "@rushstack/eslint-config": "~3.2.0",
-    "@rushstack/heft": "~0.49.7",
-    "@rushstack/heft-jest-plugin": "~0.5.4",
     "@types/crypto-js": "^4.1.1",
     "@types/fs-extra": "^11.0.1",
-    "@types/heft-jest": "~1.0.3",
+    "@types/jest": "^29.5.0",
     "@types/lodash": "^4.14.191",
     "@types/nconf": "^0.10.3",
     "@types/node": "18.15.0",
     "@types/yargs": "^17.0.22",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.35.0",
+    "jest": "^29.5.0",
     "npm-run-all": "^4.1.5",
+    "ts-jest": "^29.0.5",
     "tsup": "^6.6.3",
     "typescript": "^4.9.5"
   }
