node app bundling fixes

--- a/modules/extraction-broker/tsconfig.json
+++ b/modules/extraction-broker/tsconfig.json
@@ -18,9 +18,8 @@
     "importHelpers": true,
     "types": ["node", "jest"],
 
-    "module": "commonjs",
-    "target": "ESNext",
-    "lib": ["ESNext"],
+    "module": "CommonJS",
+    "target": "ES2020",
 
     "paths": {
       "~/*" : ["./src/*"]
