--- a/modules/extraction-broker/tsconfig.json
+++ b/modules/extraction-broker/tsconfig.json
@@ -11,14 +11,14 @@
     "sourceMap": true,
     "declarationMap": true,
     "inlineSources": true,
-    "experimentalDecorators": true,
+    "experimentalDecorators": false,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "esModuleInterop": true,
     "importHelpers": true,
     "types": ["node", "jest"],
 
-    "module": "CommonJS",
+    "module": "NodeNext",
     "target": "ES2020",
 
     "paths": {
