--- a/modules/extraction-broker/.eslintrc
+++ b/modules/extraction-broker/.eslintrc
@@ -1,27 +1,50 @@
 {
-    "root": true,
-    "parser": "@typescript-eslint/parser",
-    "plugins": [
-        "@typescript-eslint"
-    ],
-    "extends": [
-        "eslint:recommended",
-        "plugin:@typescript-eslint/eslint-recommended",
-        "plugin:@typescript-eslint/recommended"
-    ],
+  "root": true,
+  "parser": "@typescript-eslint/parser",
+  "plugins": [
+    "@typescript-eslint"
+  ],
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
   "rules": {
     "semi": "off",
     "indent": "off",
-    "@typescript-eslint/indent": ["error", 2],
-    "@typescript-eslint/no-explicit-any": ["off"],
-    "@typescript-eslint/naming-convention": ["off"],
-    "@typescript-eslint/no-floating-promises":["off"],
-    "@typescript-eslint/no-unused-vars":["off"],
-    "@typescript-eslint/explicit-function-return-type":["off"],
-    "@typescript-eslint/explicit-member-accessibility": ["off"],
-    "@rushstack/typedef-var":["off"],
+    "@typescript-eslint/indent": [
+      "error",
+      2
+    ],
+    "@typescript-eslint/no-explicit-any": [
+      "off"
+    ],
+    "@typescript-eslint/naming-convention": [
+      "off"
+    ],
+    "@typescript-eslint/no-floating-promises": [
+      "off"
+    ],
+    "@typescript-eslint/no-unused-vars": [
+      "off"
+    ],
+    "@typescript-eslint/no-inferrable-types": "off",
+    "@typescript-eslint/explicit-function-return-type": [
+      "off"
+    ],
+    "@typescript-eslint/explicit-member-accessibility": [
+      "off"
+    ],
+    "@rushstack/typedef-var": [
+      "off"
+    ],
     "quotes": "off",
-    "@typescript-eslint/quotes": ["error", "single"],
-    "require-atomic-updates": ["warn"]
+    "@typescript-eslint/quotes": [
+      "error",
+      "single"
+    ],
+    "require-atomic-updates": [
+      "warn"
+    ]
   }
 }
