--- a/modules/extraction-broker/tsconfig.json
+++ b/modules/extraction-broker/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "$schema": "http://json.schemastore.org/tsconfig",
-
   "compilerOptions": {
     "outDir": "dist",
-    "rootDirs": ["src/"],
-
-    "noEmit": false,
+    "rootDirs": [
+      "src/"
+    ],
+    "noEmit": true,
     "forceConsistentCasingInFileNames": true,
     "declaration": true,
     "sourceMap": true,
@@ -16,15 +16,23 @@
     "strict": true,
     "esModuleInterop": true,
     "importHelpers": true,
-    "types": ["node", "jest"],
-
+    "types": [
+      "node",
+      "jest"
+    ],
     "module": "NodeNext",
     "target": "ES2020",
-
     "paths": {
-      "~/*" : ["./src/*"]
+      "~/*": [
+        "./src/*"
+      ]
     }
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "dist"]
+  "include": [
+    "src/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
