changed manual grobid install to docker-based install

--- a/modules/extraction-broker/package.json
+++ b/modules/extraction-broker/package.json
@@ -11,7 +11,7 @@
     "clean": "rm -r dist/",
     "tsc": "tsc",
     "tsc:watch": "tsc --watch",
-    "alias": "bin/fix-path-aliases -f ./dist",
+    "alias": "./node_modules/.bin/babel --config-file ./.babelrc-path-alias ./dist -d ./dist",
     "lint": "eslint src/",
     "tsup": "tsup --onSuccess 'run-p alias lint'",
     "tsup:watch": "tsup --watch src/ --onSuccess 'run-p alias lint'",
